--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@forward './scss/base/';
+@import "primeicons/primeicons.css";
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+
+@media screen and (min-width: 90em){
+  #main{
+      max-width: 85rem;
+      margin: 0 auto;
+  }
+}
