--- a/src/shared/components/loader/page/loader.component.scss
+++ b/src/shared/components/loader/page/loader.component.scss
@@ -17,7 +17,7 @@ section{
 }
 
 #wifi-loader {
-  --front-color: #4f29f0;
+  --front-color: #3B82F6;
   --back-color: #c3c8de;
   width: 64px;
   height: 64px;
